--- a/ourProject/fonter/package.json
+++ b/ourProject/fonter/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "echarts": "^4.3.0",
     "element-ui": "^2.12.0",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-echarts": "^4.0.3",
     "vue-particles": "^1.0.9",
